# tree-sitter-mypyc

./: .gitattributes  README.md
mypyc_ir/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
mypyc_ir/bindings/node/: binding.cc  index.js
mypyc_ir/bindings/rust/: lib.rs
mypyc_ir/queries/: highlights.scm  locals.scm
mypyc_ir/src/: grammar.json  node-types.json  parser.c
mypyc_test_cases/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
mypyc_test_cases/bindings/node/: binding.cc  index.js
mypyc_test_cases/bindings/rust/: lib.rs
mypyc_test_cases/queries/: highlights.scm  injections.scm
mypyc_test_cases/src/: grammar.json  node-types.json  parser.c
